--- a/Config/DefaultImGui.ini
+++ b/Config/DefaultImGui.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/ImGui.ImGuiSettings]
-ToggleInput=(Key=CapsLock,Shift=Unchecked,Ctrl=Unchecked,Alt=Unchecked,Cmd=Unchecked)
+ToggleInput=(Key=SpaceBar,Shift=Unchecked,Ctrl=Unchecked,Alt=Unchecked,Cmd=Unchecked)
 bUseSoftwareCursor=False
 bShareKeyboardInput=False
 bShareGamepadInput=False
 bShareMouseInput=False
-ImGuiInputHandlerClass=None
+ImGuiInputHandlerClass=/Script/Grid.GridImGuiInputHandler
+CanvasSize=(SizeType=Desktop,Width=3840,Height=2160,bExtendToViewport=False)
 
