--- a/Config/DefaultImGui.ini
+++ b/Config/DefaultImGui.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/ImGui.ImGuiSettings]
-ToggleInput=(Key=SpaceBar,Shift=Unchecked,Ctrl=Unchecked,Alt=Unchecked,Cmd=Unchecked)
+ToggleInput=(Key=Insert,Shift=Unchecked,Ctrl=Unchecked,Alt=Unchecked,Cmd=Unchecked)
 bUseSoftwareCursor=False
 bShareKeyboardInput=False
 bShareGamepadInput=False
